[MOD] 调整相关代码